Bug 272643 - Kjots/Kontact's Notebooks cannot save non-ascii characters
Summary: Kjots/Kontact's Notebooks cannot save non-ascii characters
Status: RESOLVED FIXED
Alias: None
Product: kjots
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.6 pre
Platform: Arch Linux Linux
: NOR critical
Target Milestone: ---
Assignee: Stephen Kelly
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-06 19:37 UTC by eric
Modified: 2011-07-08 18:31 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description eric 2011-05-06 19:37:53 UTC
Version:           4.6 pre (using KDE 4.6.2) 
OS:                Linux

When typing or pasting non-ascii text in kjots or kontact's notebook, everything is good. But after quitting and restarting kjots/kontact every non-ascii character is changed in to '?' (a question mark).

Reproducible: Always

Steps to Reproduce:
1) Enter non-ascii text in to kjots or kontact's notebook. Chinese or Russian doesn't matter, I use this: Вася;
2) Quit and restart kjots or kontact and look at the place where the non-ascii text should be.

Actual Results:  
The non-ascii text (for example: Вася) is changed in to many ?'s (????). A question mark for every non-ascii character.

Expected Results:  
The same characters (Вася), not changed in to ????.

This happens with kjots-4.6beta5 (4.5.95) and both with kde-4.6.2 and 4.6.3.

Maybe related, but something like this also happened with kmail (https://bugs.kde.org/show_bug.cgi?id=263761), but that issue is fixed in kdepimlibs-4.6.3, kjot's issue is not.
Comment 1 Matija Šuklje 2011-05-07 14:35:49 UTC
Can confirm it on Gentoo with KDE 4.6.2 and KDEPIM pulled from git on 2011-04-22.

Same problem with Slovenian localisation (e.g. "mogoče" → "mogo?e")

I see the same problem with tags in KOrganizer and KMail, so it might be a Akonadi (or Nepomuk) global issue.
Comment 2 Matija Šuklje 2011-05-07 14:44:24 UTC
That being said, I suspect the real culprit might be Virtuoso as reported in Bug #271664 (and to upstream).
Comment 3 Matija Šuklje 2011-05-07 15:02:40 UTC
...oooor, I could be terribly wrong. Downgrading to Virtuoso 6.1.2 didn't solve this issue :\ (although it might be that Unicode tags work now)
Comment 4 Igor Poboiko 2011-06-04 15:34:54 UTC
Confirmed. Raising severity to "critical" because this leads to user data loss (all data written using non-ascii characters just disappears).

I use Gentoo with KDE SC 4.6.3 and KDEPIM 4.5.96 (KJots 4.6 rc 1).
Comment 5 Stephen Kelly 2011-06-05 11:39:54 UTC
Git commit ff1a4b75edcd54b23e44dfe9562442aa6de80c7c by Stephen Kelly.
Committed on 05/06/2011 at 11:37.
Pushed by skelly into branch 'master'.

Set the charset and content transfer encoding on saved and new notes.

BUG: 272643

M  +2    -0    akonadi_next/notecreatorandselector.cpp     
M  +2    -0    examples/coisceim/noteviewer.cpp     
M  +2    -0    kjots/kjotsmodel.cpp     
M  +4    -0    kjots/plasmoid/akonotes_noteapplet.cpp     

http://commits.kde.org/kdepim/ff1a4b75edcd54b23e44dfe9562442aa6de80c7c
Comment 6 Stephen Kelly 2011-06-05 11:41:31 UTC
Git commit d1f0db0881bd79db1e837a62600b81250e622f17 by Stephen Kelly.
Committed on 05/06/2011 at 11:40.
Pushed by skelly into branch '4.6'.

Set the charset and content transfer encoding on saved and new notes.

CCBUG: 272643

M  +2    -0    akonadi_next/notecreatorandselector.cpp     
M  +2    -0    kjots/kjotsmodel.cpp     
M  +4    -0    kjots/plasmoid/akonotes_noteapplet.cpp     

http://commits.kde.org/kdepim/d1f0db0881bd79db1e837a62600b81250e622f17
Comment 7 pashaev.sergey 2011-07-08 18:19:57 UTC
Can confirm it on Arch Linux with KDE 4.6.5 (KDEPIM 4.6.1)
Comment 8 Alexander Potashev 2011-07-08 18:31:25 UTC
(In reply to comment #7)
> Can confirm it on Arch Linux with KDE 4.6.5 (KDEPIM 4.6.1)

You have bug#275666, sorry.