Set the charset and content transfer encoding on saved and new notes.

BUG: 272643