akonadi_next/notecreatorandselector.cpp
@@ -92,6 +92,8 @@ void NoteCreatorAndSelector::doCreateNote()
 
   newPage->subject( true )->fromUnicodeString( title, encoding );
   newPage->contentType( true )->setMimeType( "text/plain" );
+  newPage->contentType()->setCharset("utf-8");
+  newPage->contentTransferEncoding(true)->setEncoding(KMime::Headers::CEquPr);
   newPage->date( true )->setDateTime( KDateTime::currentLocalDateTime() );
   newPage->from( true )->fromUnicodeString( QString::fromLatin1( "Kjots@kde4" ), encoding );
   // Need a non-empty body part so that the serializer regards this as a valid message.
